<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="@color/darkgrey"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/registerUsername"
                        android:background="@color/grey"
                        android:drawableLeft="@drawable/baseline_person_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/username"
                        android:padding="8dp"
                        android:textColor="@color/darkgrey"
                        android:layout_marginTop="40dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/registerEmail"
                        android:background="@color/grey"
                        android:inputType="textEmailAddress"
                        android:drawableLeft="@drawable/baseline_email_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/email"
                        android:padding="8dp"
                        android:textColor="@color/darkgrey"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/registerPhone"
                        android:background="@color/grey"
                        android:drawableLeft="@drawable/baseline_phone_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/phone"
                        android:padding="8dp"
                        android:inputType="phone"
                        android:textColor="@color/darkgrey"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/registerPassword"
                        android:background="@color/grey"
                        android:drawableLeft="@drawable/baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/password"
                        android:padding="8dp"
                        android:inputType="textPassword"
                        android:textColor="@color/darkgrey"
                        android:layout_marginTop="20dp"/>

                    <CheckBox
                        android:id="@+id/termsCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/password"
                        android:layout_marginTop="20dp"
                        android:text="By Checking the box you agree with our terms and conditions"
                        android:textSize="9dp"
                        android:textColor="@color/black" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:id="@+id/registerButton"
                        android:text="@string/register"
                        android:textSize="18sp"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/darkgrey"
                        app:cornerRadius="200dp"/>

                    <TextView
                        android:id="@+id/registerText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_acc"
                        android:textSize="10dp"
                        android:textAlignment="center"
                        android:layout_below="@+id/registerButton"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>
    </FrameLayout>

</LinearLayout>